# 30122-project-apwhy

./: Google_dist.py  README.md  access_police_data.py  acs_data.py  cleaning_data.py  dist_test.csv  make_dummy_viz_data.py  pyproject.toml
apwhy/: pyproject.toml
deprivation_evictions/: __main__.py  app.py
deprivation_evictions/data_bases/clean_data/: clean_database.csv  cleaning_data.py
deprivation_evictions/data_bases/final_data/: processed_data.csv
deprivation_evictions/data_bases/raw_data/: Synthetic Data.csv  acs_data.csv  cleaning_data.py  eviction_data.csv  google_dist.py  google_distancematrix.csv  pull_acs_data.py  pull_crime_data.py
deprivation_evictions/graphs/: bivariate_map.py  general_map.py  line_graphs.py  make_dummy_viz_data.py  radar_graph.py  scatter_plot.py
deprivation_evictions/index/: index.py
