[tool.poetry]
name = "apwhy"
version = "0.1.0"
description = "\"CAPP 30122 Project Group APWHY\""
authors = ["Your Name <you@example.com>"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
geopandas = "^0.12.2"

[tool.poetry.group.dev.dependencies]
geopandas = "^0.12.2"
shapely = "^2.0.1"
pandas = "^1.5.3"
python-time = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
