[tool.poetry]
name = "apwhy"
version = "0.1.0"
description = "\"CAPP 30122 Project Group APWHY\""
authors = ["Your Name <you@example.com>"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
geopandas = "^0.12.2"
factor-analyzer = "^0.4.1"
dash = "^2.8.1"
dash-bootstrap-components = "^1.4.0"
statsmodels = "^0.13.5"

[tool.poetry.group.dev.dependencies]
geopandas = "^0.12.2"
shapely = "^2.0.1"
pandas = "^1.5.3"
python-time = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
