[tool.poetry]
name = "apwhy3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
dash = "^2.8.1"
dash-bootstrap-components = "^1.4.0"
statsmodels = "^0.13.5"
geopandas = "^0.12.2"
geopy = "^2.3.0"
matplotlib = "^3.7.1"
sklearn = "^0.0.post1"
factor-analyzer = "^0.4.1"
sodapy = "^2.2.0"
censusdata = "^1.15.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
